commit before a large change

--- a/KoishiPro_Sakura/system_user.conf
+++ b/KoishiPro_Sakura/system_user.conf
@@ -8,7 +8,7 @@ errorlog = 3
 nickname = Komeiji Koishi
 gamename = Game
 lastcategory = Uncategorized
-lastdeck = 0_100_0AI_Random2
+lastdeck = 0_1_0AI_Random
 textfont = ./fonts/simhei.ttf 14
 numfont = ./fonts/arial.ttf
 serverport = 7911
@@ -34,7 +34,7 @@ auto_search_limit = 2
 search_multiple_keywords = 1
 search_regex = 0
 ignore_deck_changes = 0
-default_ot = 1
+default_ot = 2
 enable_bot_mode = 1
 bot_deck_path = ./windbot/Decks
 quick_animation = 1
@@ -44,8 +44,8 @@ window_maximized = 1
 window_width = 1003
 window_height = 620
 resize_popup_menu = 0
-enable_sound = 1
-enable_music = 1
+enable_sound = 0
+enable_music = 0
 #Volume of sound and music, between 0 and 100
 sound_volume = 0
 music_volume = 0
