--- a/KoishiPro_Sakura/system_user.conf
+++ b/KoishiPro_Sakura/system_user.conf
@@ -2,22 +2,22 @@
 #nickname & gamename should be less than 20 characters
 use_d3d = 0
 use_image_scale = 1
-pro_version = 4939
+pro_version = 4944
 antialias = 2
 errorlog = 3
 nickname = Komeiji Koishi
 gamename = Game
 lastcategory = Uncategorized
-lastdeck = 0_100_0AI_Random2
+lastdeck = 0_10_0AI_Random
 textfont = ./fonts/simhei.ttf 14
 numfont = ./fonts/arial.ttf
 serverport = 7911
 lasthost = 127.0.0.1
 lastport = 7911
-automonsterpos = 1
-autospellpos = 1
+automonsterpos = 0
+autospellpos = 0
 randompos = 0
-autochain = 1
+autochain = 0
 waitchain = 0
 mute_opponent = 0
 mute_spectators = 0
@@ -41,8 +41,8 @@ quick_animation = 1
 auto_save_replay = 1
 prefer_expansion_script = 0
 window_maximized = 1
-window_width = 833
-window_height = 450
+window_width = 994
+window_height = 610
 resize_popup_menu = 0
 enable_sound = 0
 enable_music = 0
