--- a/KoishiPro_Sakura/system_user.conf
+++ b/KoishiPro_Sakura/system_user.conf
@@ -8,7 +8,7 @@ errorlog = 3
 nickname = Komeiji Koishi
 gamename = Game
 lastcategory = Uncategorized
-lastdeck = 0_100_0AI_Random
+lastdeck = 0_100_0AI_Random2
 textfont = ./fonts/simhei.ttf 14
 numfont = ./fonts/arial.ttf
 serverport = 7911
@@ -40,9 +40,9 @@ bot_deck_path = ./windbot/Decks
 quick_animation = 1
 auto_save_replay = 1
 prefer_expansion_script = 0
-window_maximized = 1
-window_width = 994
-window_height = 610
+window_maximized = 0
+window_width = 963
+window_height = 580
 resize_popup_menu = 0
 enable_sound = 0
 enable_music = 0
