--- a/KoishiPro_Sakura/locales/en-US/strings.conf
+++ b/KoishiPro_Sakura/locales/en-US/strings.conf
@@ -80,6 +80,7 @@
 !system 222 Activate Trigger Effect?
 !system 223 and Ask other Trigger Effect activate later
 !system 224 First Special Summoned by own Condition
+!system 225 Overlayed under [%ls](%d)
 !system 500 Select a monster to tribute
 !system 501 Select a card to discard
 !system 502 Select a card to destroy
@@ -136,6 +137,8 @@
 !system 570 Select the zone that cannot be used
 !system 571 Select the zone to move to
 !system 572 Select a card to place counter
+!system 573 Select a card to negate
+!system 573 Select a card for operation
 !system 1000 Deck
 !system 1001 Hand
 !system 1002 Monster Zone
@@ -315,6 +318,8 @@
 !system 1262 Master Rules 3
 !system 1263 New Master Rules
 !system 1264 Master Rules 2020
+!system 1268 Ask before setting monster
+!system 1269 Pendulum Scale Image
 !system 1270 Card
 !system 1271 Log
 !system 1272 Clear Log
@@ -327,15 +332,16 @@
 !system 1279 SE
 !system 1280 BGM
 !system 1281 Automatically switch BGM
-!system 1282 Window Size
-!system 1283 S
-!system 1284 M
-!system 1285 L
-!system 1286 XL
-!system 1287 Pendulum Scale Image
+!system 1282 Window size
+!system 1283 Small
+!system 1284 Medium
+!system 1285 Large
+!system 1286 Extra large
+!system 1287 Show Chain 1
 !system 1288 Language
 !system 1289 Default
 !system 1290 Mute Opponent
+!system 1290 Disable Chatting
 !system 1291 Mute spectators
 !system 1292 Ignore chain
 !system 1293 Always chain
@@ -398,6 +404,7 @@
 !system 1351 Surrender
 !system 1352 Main message：
 !system 1353 Start at turn：
+!system 1355 Are you sure to set [%ls]?
 !system 1356 Do you want to quit without saving?
 !system 1357 Ignore deck changes while quiting
 !system 1358 Search cards automatically
@@ -465,6 +472,10 @@
 !system 1429 Ineligible Place.
 !system 1430 Ineligible Position.
 !system 1431 Ineligible Counter.
+!system 1440 Close picture
+!system 1441 Zoom in
+!system 1442 Zoom out
+!system 1443 Restore size
 !system 1450 Pack Showcase
 !system 1451 AI Decks
 !system 1452 Uncategorized
@@ -514,7 +525,7 @@
 !system 1619 [%ls] Attack [%ls]
 !system 1620 [%ls] Direct Attack
 !system 1621 Attack Negated
-!system 1622 [%ls]You lose points
+!system 1622 [%ls] Missed timing
 !system 1623 Coin landed on:
 !system 1624 Die landed on:
 #tips
@@ -624,6 +635,8 @@
 !counter 0x54 Counter(World Legacy's Continuation)
 !counter 0x55 Counter(Cauldron of the Old Man)
 !counter 0x56 Fire Fist Counter
+!counter 0x57 Phantasm Counter
+!counter 0x58 Counter(Nezumihanabi)
 #setnames, using tab for comment
 !setname 0x1 Ally of Justice
 !setname 0x2 Genex
@@ -655,6 +668,7 @@
 !setname 0x12 Frog
 !setname 0x13 Meklord
 !setname 0x3013 Meklord Emperor
+!setname 0x5013 Meklord Astro
 !setname 0x6013 Meklord Army
 !setname 0x15 B.E.S.
 !setname 0x16 Roid
@@ -866,7 +880,7 @@
 !setname 0xb5 Ritual Beast
 !setname 0x10b5 Ritual Beast Tamer
 !setname 0x20b5 Spiritual Beast
-!setname 0x40b5 Ritual Beast Ulti-
+!setname 0x40b5 Ritual Beast Ulti
 !setname 0xb6 Outer Entity
 !setname 0xb7 Elder Entity
 !setname 0xb8 Old Entity
@@ -877,7 +891,8 @@
 !setname 0xbd Gaia The Fierce Knight
 !setname 0xbe Monarch
 !setname 0xbf Charmer
-!setname 0xc0 Familiar-Possessed
+!setname 0xc0 Possessed
+!setname 0x10c0 Familiar-Possessed
 !setname 0xc1 PSY-Frame
 !setname 0x10c1 PSY-Framegear
 !setname 0xc2 Power Tool
@@ -921,6 +936,7 @@
 !setname 0xe3 Cubic
 !setname 0xe4 Celtic Guard
 !setname 0xe5 Cipher
+!setname 0x10e5 Cipher Dragon
 !setname 0xe6 Flower Cardian
 !setname 0xe7 Silent Swordsman
 !setname 0xe8 Silent Magician
@@ -973,7 +989,8 @@
 !setname 0x10d Mythical Beast
 !setname 0x10e Evolution Pill
 !setname 0x10f Borrel
-!setname 0x110 Eyes Restrict
+!setname 0x110 Relinquished
+!setname 0x1110 Eyes Restrict
 !setname 0x111 Armed Dragon
 !setname 0x112 Knightmare
 !setname 0x113 Elemental Lord
@@ -1018,9 +1035,49 @@
 !setname 0x137 Ancient Warriors
 !setname 0x138 Megalith
 !setname 0x139 Palladium Oracle
-!setname 0x13a Onomato
+!setname 0x13a Onomat
 !setname 0x13b Rebellion
 !setname 0x13c Codebreaker
 !setname 0x13d Nemesis
 !setname 0x13e Barbaros
 !setname 0x13f Plunder Patroll
+!setname 0x140 Adamancipator
+!setname 0x141 Rikka
+#setname 0x142 Eld
+!setname 0x1142 Eldlich
+!setname 0x2142 Eldlixir
+!setname 0x143 Golden Land
+!setname 0x144 Phantasm
+!setname 0x145 Dogmatika
+!setname 0x146 Melffy
+!setname 0x147 Potan
+!setname 0x148 Roland
+!setname 0x149 Fossil
+!setname 0x14a Numeron
+!setname 0x114a Numeron Gate
+!setname 0x14b Appliancer
+#setname 0x14c Spiritual Art
+!setname 0x314c Spiritual Earth Art
+!setname 0x514c Spiritual Water Art
+!setname 0x614c Spiritual Fire Art
+!setname 0x914c Spiritual Wind Art
+#setname 0xa14c Spiritual Light Art
+#setname 0xc14c Dark Spirit Art
+!setname 0x14d Tri-Brigade
+!setname 0x14e Virtual World
+!setname 0x114e Virtual World Gate
+!setname 0x14f Dual Avatar
+!setname 0x150 Magistus
+#setname 0x151 Twin
+!setname 0x1151 Live☆Twin
+!setname 0x2151 Evil★Twin
+!setname 0x152 Ki-sikil
+!setname 0x153 Lil-la
+!setname 0x154 Drytron
+!setname 0x155 Sprigguns
+!setname 0x156 Security Force
+!setname 0x157 Myutant
+#setname 0x158 サン
+!setname 0x1158 Sunvine
+!setname 0x2158 Sunavalon
+!setname 0x159 Holy Night
