--- a/KoishiPro_Sakura/system_user.conf
+++ b/KoishiPro_Sakura/system_user.conf
@@ -39,7 +39,9 @@ enable_bot_mode = 1
 bot_deck_path = ./windbot/Decks
 quick_animation = 1
 auto_save_replay = 1
+draw_single_chain = 0
 prefer_expansion_script = 0
+ask_mset = 0
 window_maximized = 0
 window_width = 939
 window_height = 560
