73% over 100 games, 40 over 40

--- a/KoishiPro_Sakura/system_user.conf
+++ b/KoishiPro_Sakura/system_user.conf
@@ -8,7 +8,7 @@ errorlog = 3
 nickname = Komeiji Koishi
 gamename = Game
 lastcategory = Uncategorized
-lastdeck = 1_1_-1AI_Random
+lastdeck = 1_10_-1AI_Random2
 textfont = ./fonts/simhei.ttf 14
 numfont = ./fonts/arial.ttf
 serverport = 7911
