--- a/windbot_master/WindBot.csproj
+++ b/windbot_master/WindBot.csproj
@@ -113,6 +113,7 @@
     <Compile Include="Game\GamePacketFactory.cs" />
     <Compile Include="Game\Room.cs" />
     <Compile Include="Logger.cs" />
+    <Compile Include="TreeActivation.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SqlComm.cs" />
