--- a/WindBot-Ignite-master/WindBot.csproj
+++ b/WindBot-Ignite-master/WindBot.csproj
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="12.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
   <PropertyGroup>
@@ -55,8 +55,11 @@
   <ItemGroup>
     <Compile Include="Config.cs" />
     <Compile Include="Game\AI\Deck.cs" />
+    <Compile Include="Game\AI\Decks\AIExecutor2.cs" />
+    <Compile Include="Game\AI\Decks\AIExecutor1.cs" />
+    <Compile Include="Game\AI\Decks\AIExecutorBase.cs" />
+    <Compile Include="Game\AI\Decks\AIMasterExecutor.cs" />
     <Compile Include="Game\DecksManager.cs" />
-    <Compile Include="Game\AI\Decks\ABCExecutor.cs" />
     <Compile Include="Game\AI\Decks\AltergeistExecutor.cs" />
     <Compile Include="Game\AI\Decks\BlackwingExecutor.cs" />
     <Compile Include="Game\AI\Decks\MathMechExecutor.cs" />
@@ -104,8 +107,10 @@
     <Compile Include="Game\GamePacketFactory.cs" />
     <Compile Include="Game\Room.cs" />
     <Compile Include="Logger.cs" />
+    <Compile Include="MCST.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SQLComm.cs" />
     <Compile Include="WindBotInfo.cs" />
     <Compile Include="YGOSharp.Network\AsyncBinaryClient.cs" />
     <Compile Include="YGOSharp.Network\AsyncNetworkServer.cs" />
@@ -125,6 +130,12 @@
   <ItemGroup>
     <None Include="App.config" />
     <None Include="COPYING">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Include="Decks\AI_Random1.ydk">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Include="Decks\AI_Random2.ydk">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
     <None Include="LICENSE">
