--- a/WindBot-Ignite-master/ExecutorBase/ExecutorBase.csproj
+++ b/WindBot-Ignite-master/ExecutorBase/ExecutorBase.csproj
@@ -65,6 +65,7 @@
     <Compile Include="Game\AI\Enums\ShouldNotBeTarget.cs" />
     <Compile Include="Game\AI\Executor.cs" />
     <Compile Include="Game\AI\ExecutorType.cs" />
+    <Compile Include="Game\AI\HintMsg.cs" />
     <Compile Include="Game\AI\Zones.cs" />
     <Compile Include="Game\BattlePhase.cs" />
     <Compile Include="Game\BattlePhaseAction.cs" />
