--- a/edopro_bin/config/system.conf
+++ b/edopro_bin/config/system.conf
@@ -10,7 +10,7 @@ antialias = 2
 coreLogOutput = 3
 nickname = crispy
 gamename = I:P
-lastdeck = Mikano
+lastdeck = AI_Random1
 lastlflist = 0
 lastallowedcards = 3
 lastDuelParam = 190464
@@ -19,13 +19,13 @@ lastDuelForbidden = 0
 timeLimit = 300000
 team1count = 1
 team2count = 1
-bestOf = 3
+bestOf = 1
 startLP = 8000
 startHand = 5
 drawCount = 1
 relayDuel = 0
-noShuffleDeck = 0
-noCheckDeckContent = 0
+noShuffleDeck = 1
+noCheckDeckContent = 1
 noCheckDeckSize = 0
 hideHandsInReplays = 0
 textfont = fonts/NotoSansJP-Regular.otf 12
