--- a/WindBot-Ignite-master/ExecutorBase/ExecutorBase.csproj
+++ b/WindBot-Ignite-master/ExecutorBase/ExecutorBase.csproj
@@ -10,6 +10,7 @@
     <RootNamespace>ExecutorBase</RootNamespace>
     <AssemblyName>ExecutorBase</AssemblyName>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
+    <LangVersion>6</LangVersion>
     <FileAlignment>512</FileAlignment>
     <Deterministic>true</Deterministic>
     <TargetFrameworkProfile />
@@ -42,7 +43,6 @@
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Data" />
-    <Reference Include="System.Net.Http" />
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
@@ -64,8 +64,9 @@
     <Compile Include="Game\AI\Enums\ShouldNotBeSpellTarget.cs" />
     <Compile Include="Game\AI\Enums\ShouldNotBeTarget.cs" />
     <Compile Include="Game\AI\Executor.cs" />
-    <Compile Include="Game\AI\ExecutorType.cs" />
     <Compile Include="Game\AI\HintMsg.cs" />
+    <Compile Include="Game\AI\Opcodes.cs" />
+    <Compile Include="Game\AI\ExecutorType.cs" />
     <Compile Include="Game\AI\Zones.cs" />
     <Compile Include="Game\BattlePhase.cs" />
     <Compile Include="Game\BattlePhaseAction.cs" />
