updated git ignore

--- a/edopro_bin/config/system.conf
+++ b/edopro_bin/config/system.conf
@@ -1,6 +1,7 @@
 # Project Ignis: EDOPro system.conf
 # Overwritten on normal game exit
 driver_type = default
+useWayland = 0
 vsync = 1
 maxFPS = 60
 fullscreen = 0
