--- a/edopro_bin/config/system.conf
+++ b/edopro_bin/config/system.conf
@@ -4,19 +4,19 @@ driver_type = default
 vsync = 1
 maxFPS = 60
 fullscreen = 0
-showConsole = 0
+showConsole = 1
 windowStruct = 
 antialias = 2
 coreLogOutput = 3
-nickname = crispy
+nickname = Player
 gamename = I:P
-lastdeck = AI_Random1
+lastdeck = AI_Swordsoul
 lastlflist = 0
 lastallowedcards = 3
-lastDuelParam = 190464
+lastDuelParam = 4295157760
 lastExtraRules = 0
 lastDuelForbidden = 0
-timeLimit = 300000
+timeLimit = 18000
 team1count = 1
 team2count = 1
 bestOf = 1
@@ -26,21 +26,22 @@ drawCount = 1
 relayDuel = 0
 noShuffleDeck = 0
 noCheckDeckContent = 1
-noCheckDeckSize = 0
+noCheckDeckSize = 1
 hideHandsInReplays = 0
 textfont = fonts/NotoSansJP-Regular.otf 12
 numfont = fonts/NotoSansJP-Regular.otf
+fallbackFonts = 
 serverport = 7911
 lasthost = 127.0.0.1
 lastport = 7911
 botThrowRock = 0
 botMute = 0
-lastBot = 27
+lastBot = 29
 lastServer = EU Central (Competitive)
-automonsterpos = 1
-autospellpos = 1
+automonsterpos = 0
+autospellpos = 0
 randompos = 0
-autochain = 1
+autochain = 0
 waitchain = 0
 mute_opponent = 0
 mute_spectators = 0
@@ -55,23 +56,24 @@ keep_cardinfo_aspect_ratio = 0
 showFPS = 1
 hidePasscodeScope = 0
 showScopeLabel = 1
+ignoreDeckContents = 0
 filterBot = 1
 show_unofficial = 0
 ctrlClickIsRMB = 0
 dpi_scale = 1.000000
-skin = Burning
+skin = Purple - Obsessed
 override_ssl_certificate_path = 
 language = English
 scale_background = 1
-dotted_lines = 1
+dotted_lines = 0
 controller_input = 0
 accurate_bg_resize = 0
 confirm_clear_deck = 0
 enable_music = 0
-enable_sound = 1
+enable_sound = 0
 music_volume = 5
-sound_volume = 5
-loopMusic = 1
+sound_volume = 20
+loopMusic = 0
 saveHandTest = 1
 discordIntegration = 0
 noClientUpdates = 0
