--- a/edopro_bin/config/system.conf
+++ b/edopro_bin/config/system.conf
@@ -1,19 +1,19 @@
 # Project Ignis: EDOPro system.conf
 # Overwritten on normal game exit
 driver_type = default
-vsync = 0
-maxFPS = 999
+vsync = 1
+maxFPS = 60
 fullscreen = 0
-showConsole = 1
+showConsole = 0
 windowStruct = 
 antialias = 0
 coreLogOutput = 3
 nickname = Player
-gamename = I:P
-lastdeck = AI_Swordsoul
+gamename = Game
+lastdeck = 
 lastlflist = 0
 lastallowedcards = 3
-lastDuelParam = 4295157760
+lastDuelParam = 190464
 lastExtraRules = 0
 lastDuelForbidden = 0
 timeLimit = 18000
@@ -25,8 +25,8 @@ startHand = 5
 drawCount = 1
 relayDuel = 0
 noShuffleDeck = 1
-noCheckDeckContent = 1
-noCheckDeckSize = 1
+noCheckDeckContent = 0
+noCheckDeckSize = 0
 hideHandsInReplays = 0
 textfont = fonts/NotoSansJP-Regular.otf 12
 numfont = fonts/NotoSansJP-Regular.otf
@@ -36,17 +36,17 @@ lasthost = 127.0.0.1
 lastport = 7911
 botThrowRock = 0
 botMute = 0
-lastBot = 29
-lastServer = EU Central (Competitive)
+lastBot = 0
+lastServer = EU Central (Casual)
 automonsterpos = 0
 autospellpos = 0
 randompos = 0
-autochain = 0
+autochain = 1
 waitchain = 0
 mute_opponent = 0
 mute_spectators = 0
 hide_setname = 0
-hide_hint_button = 0
+hide_hint_button = 1
 draw_field_spell = 1
 quick_animation = 1
 alternative_phase_layout = 0
@@ -61,7 +61,7 @@ filterBot = 1
 show_unofficial = 0
 ctrlClickIsRMB = 0
 dpi_scale = 1.000000
-skin = Purple - Obsessed
+skin = none
 override_ssl_certificate_path = 
 language = English
 scale_background = 1
@@ -70,10 +70,10 @@ controller_input = 0
 accurate_bg_resize = 0
 confirm_clear_deck = 0
 enable_music = 0
-enable_sound = 0
-music_volume = 5
+enable_sound = 1
+music_volume = 20
 sound_volume = 20
-loopMusic = 0
+loopMusic = 1
 saveHandTest = 1
 discordIntegration = 0
 noClientUpdates = 0
