--- a/edopro_bin/config/system.conf
+++ b/edopro_bin/config/system.conf
@@ -10,7 +10,7 @@ antialias = 0
 coreLogOutput = 3
 nickname = Player
 gamename = Game
-lastdeck = 
+lastdeck = AI_Random1
 lastlflist = 0
 lastallowedcards = 3
 lastDuelParam = 190464
@@ -30,7 +30,7 @@ noCheckDeckSize = 0
 hideHandsInReplays = 0
 textfont = fonts/NotoSansJP-Regular.otf 12
 numfont = fonts/NotoSansJP-Regular.otf
-fallbackFonts = 
+fallbackFonts = "bundled 12"
 serverport = 7911
 lasthost = 127.0.0.1
 lastport = 7911
