Added SnakeEyes AI

--- a/WindBot-Ignite-master/WindBot.csproj
+++ b/WindBot-Ignite-master/WindBot.csproj
@@ -64,12 +64,11 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="CSVReader.cs" />
-    <Compile Include="Game\AI\Decks\AIHardCoded2.cs" />
-    <Compile Include="Game\AI\Decks\AIHardCoded1.cs" />
+    <Compile Include="Game\AI\Decks\AISnakeEyes.cs" />
     <Compile Include="Game\AI\Decks\AIHardCodedBase.cs" />
+    <Compile Include="Game\AI\Deck.cs" />
     <Compile Include="HttpComm.cs" />
     <Compile Include="Config.cs" />
-    <Compile Include="Game\AI\Deck.cs" />
     <Compile Include="Game\AI\Decks\AIExecutor1.cs" />
     <Compile Include="Game\AI\Decks\AIExecutor2.cs" />
     <Compile Include="Game\AI\Decks\AIExecutorBase.cs" />
