--- a/edopro_bin/config/system.conf
+++ b/edopro_bin/config/system.conf
@@ -10,7 +10,7 @@ antialias = 0
 coreLogOutput = 3
 nickname = Player
 gamename = Game
-lastdeck = AI_Random1
+lastdeck = AI_SnakeEyes
 lastlflist = 0
 lastallowedcards = 3
 lastDuelParam = 190464
@@ -19,24 +19,24 @@ lastDuelForbidden = 0
 timeLimit = 18000
 team1count = 1
 team2count = 1
-bestOf = 1
+bestOf = 3
 startLP = 8000
 startHand = 5
 drawCount = 1
 relayDuel = 0
-noShuffleDeck = 1
+noShuffleDeck = 0
 noCheckDeckContent = 0
 noCheckDeckSize = 0
 hideHandsInReplays = 0
 textfont = fonts/NotoSansJP-Regular.otf 12
 numfont = fonts/NotoSansJP-Regular.otf
-fallbackFonts = "bundled 12"
+fallbackFonts = 
 serverport = 7911
 lasthost = 127.0.0.1
 lastport = 7911
 botThrowRock = 0
 botMute = 0
-lastBot = 0
+lastBot = 2
 lastServer = EU Central (Casual)
 automonsterpos = 0
 autospellpos = 0
@@ -70,11 +70,11 @@ controller_input = 0
 accurate_bg_resize = 0
 confirm_clear_deck = 0
 enable_music = 0
-enable_sound = 1
+enable_sound = 0
 music_volume = 20
 sound_volume = 20
 loopMusic = 1
-saveHandTest = 1
+saveHandTest = 0
 discordIntegration = 0
 noClientUpdates = 0
 logDownloadErrors = 0
