--- a/WindBot-Ignite-master/WindBot.csproj
+++ b/WindBot-Ignite-master/WindBot.csproj
@@ -64,6 +64,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="CSVReader.cs" />
+    <Compile Include="Game\AI\Decks\AITenpai.cs" />
     <Compile Include="Game\AI\Decks\AISnakeEyes.cs" />
     <Compile Include="Game\AI\Decks\AIHardCodedBase.cs" />
     <Compile Include="Game\AI\Deck.cs" />
