--- a/edopro_bin/config/system.conf
+++ b/edopro_bin/config/system.conf
@@ -10,8 +10,8 @@ antialias = 0
 coreLogOutput = 3
 nickname = Player
 gamename = Game
-lastdeck = AI_SnakeEyes
-lastlflist = 3609193642
+lastdeck = AI_Tenpai
+lastlflist = 0
 lastallowedcards = 3
 lastDuelParam = 190464
 lastExtraRules = 0
@@ -30,7 +30,7 @@ noCheckDeckSize = 0
 hideHandsInReplays = 0
 textfont = fonts/NotoSansJP-Regular.otf 12
 numfont = fonts/NotoSansJP-Regular.otf
-fallbackFonts = "bundled 12"
+fallbackFonts = 
 serverport = 7911
 lasthost = 127.0.0.1
 lastport = 7911
