Added more decks and added runic stun card code

--- a/edopro_bin/config/system.conf
+++ b/edopro_bin/config/system.conf
@@ -10,7 +10,7 @@ antialias = 0
 coreLogOutput = 3
 nickname = Player
 gamename = Game
-lastdeck = AI_Tenpai
+lastdeck = AI_Yubel
 lastlflist = 0
 lastallowedcards = 3
 lastDuelParam = 190464
