--- a/edopro_bin/config/system.conf
+++ b/edopro_bin/config/system.conf
@@ -10,7 +10,7 @@ antialias = 0
 coreLogOutput = 3
 nickname = Player
 gamename = Game
-lastdeck = AI_Random1
+lastdeck = AI_Combined1
 lastlflist = 0
 lastallowedcards = 3
 lastDuelParam = 190464
@@ -25,13 +25,13 @@ startHand = 5
 drawCount = 1
 relayDuel = 0
 noShuffleDeck = 0
-noCheckDeckContent = 0
+noCheckDeckContent = 1
 noCheckDeckSize = 0
 hideHandsInReplays = 0
 textfont = fonts/NotoSansJP-Regular.otf 12
 numfont = fonts/NotoSansJP-Regular.otf
 fallbackFonts = "bundled 12"
-serverport = 7911
+serverport = 7913
 lasthost = 127.0.0.1
 lastport = 7911
 botThrowRock = 0
@@ -56,7 +56,7 @@ keep_cardinfo_aspect_ratio = 0
 showFPS = 1
 hidePasscodeScope = 0
 showScopeLabel = 1
-ignoreDeckContents = 0
+ignoreDeckContents = 1
 filterBot = 1
 show_unofficial = 0
 ctrlClickIsRMB = 0
